fixed scrollbar for firefox, chrome, IE, etc

--- a/index.css
+++ b/index.css
@@ -21,6 +21,25 @@ html {
   left: 10%;
 }
 
+.r-arrows:hover, .l-arrows:hover{
+  animation-name: grow;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  /* animation-direction: alternate; */
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes grow {
+  0%, 100%{
+    height: 20%;
+    filter:invert(0%);
+  }
+  50% {
+    height: 23%;
+    filter:invert(100%);
+  }
+}
+
 .absolute-holder {
   position: relative;
 }
@@ -31,6 +50,12 @@ html {
   -webkit-overflow-scrolling: touch;
   overflow-x: scroll;
   scroll-behavior: smooth;
+  scrollbar-width: none;
+}
+
+.x-slide-container::-webkit-scrollbar {
+  /*Chrome, Safari, Edge*/
+  display: none;
 }
 
 section.project-flex-scroll {
